统一工作台数据内容
